@@ -3,3 +3,4 @@ Wed 15 Sep 2010
   - When a page is requested with a path that doesn't end in a slash, redirect
     to the same path with a slash appended. This allows relative URL
     references within the HTML code of pages to work correctly.
+  - Template rendering exceptions are handled, as are most other exceptions.
